--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <BrowserRouter basename="/lesson7.1">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -36,7 +37,9 @@
           );
         }
       }(window.location))
+      
     </script>
+    </BrowserRouter>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
